--- a/src/components/TeacherItem/styles.css
+++ b/src/components/TeacherItem/styles.css
@@ -60,7 +60,7 @@
     width: 20rem;
     height: 5.6rem;
     background: var(--color-secundary);
-    color: var(--color--button-text);
+    color: var(--color-button-text);
     border: 0;
     border-radius: 0.8rem;
     cursor: pointer;
